[package]
name = "ribbons"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
description = "Library for unwrapping `Option` and `Result` types with a formatted error message. (less boilerplate than `unwrap_or_else`)"
repository = "https://github.com/Lamby777/ribbons/"
keywords = ["option", "result", "macros", "formatting", "errors"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
